--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 beautifulsoup4==4.12.3
-bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 idna==3.7
-oauthlib==3.2.2
-PySocks==1.7.1
+pytz==2024.1
 requests==2.31.0
-requests-oauthlib==1.3.1
-six==1.16.0
 soupsieve==2.5
-tweepy==3.9.0
 urllib3==2.2.1
+
+aiogram~=2.25.1
